fix buttons navigation on mobile view corrected css

--- a/app/Resources/public/css/base.css
+++ b/app/Resources/public/css/base.css
@@ -5885,10 +5885,6 @@ ul#toolnavbox-two li a.btn{
 .block-invitation .title-profile{
     font-weight: bold;
 }
-.view-options{
-    padding-top: 7px;
-    margin-right: 10px;
-}
 .select2-container--default .select2-selection--multiple{
     background-color: #FFF !important;
     border: 1px solid #CCC !important;
